--- a/src/public/CSS/style.css
+++ b/src/public/CSS/style.css
@@ -1,3 +1,8 @@
+@import url(https://unpkg.com/@webpixels/css@1.1.5/dist/index.css);
+
+/* Bootstrap Icons */
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
+
 .link-products {
     background-color: #2e2e2e;
 }
