--- a/src/public/CSS/style.css
+++ b/src/public/CSS/style.css
@@ -1,12 +1,21 @@
 @import url(https://unpkg.com/@webpixels/css@1.1.5/dist/index.css);
 
-/* Bootstrap Icons */
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
-.link-products {
-    background-color: #2e2e2e;
+*{
+
+    font-family: 'Roboto', sans-serif !important;
+}
+
+.header-home {
+    background-color: #2e2e2e !important;
+}
+.navbar-link {
+    min-height: 30px !important;
 }
 .navbar-link-product{
+    margin: 10px 0 !important;
+    text-decoration: none;
     color: darkgray !important;
     transition: all 0.25s ease-in-out;
     font-size: 12px !important;
@@ -15,7 +24,9 @@
     color: #fff !important;
 }
 
-.main-navbar {
+
+
+.middle-navbar {
     background-color: #222;
     color: white !important;
     min-height: 100px !important;
@@ -37,14 +48,99 @@
 .nav-header:hover {
     opacity: .7;
 }
-
+.trending-icon {
+    height: 30px;
+    display: flex;
+    align-items: center;
+    background: #222;
+    z-index: 99;
+    padding-right: 16px;
+}
+.button-middle-navbar {
+    margin-top: -20px;
+}
+.button-middle-navbar-item {
+    font-size: 13px !important;
+    color: #fff !important;
+    margin-left: 10px !important;
+    border-radius: 60px !important;
+    background-color: gray !important;
+}
+#search-navbar {
+    cursor: pointer;
+}
 #input-search-navbar {
     opacity: 0;
     transition: all 0.25s;
-    width: 0px;
+    width: 0;
+    height: 27px;
 }
 
 #input-search-navbar.active {
-    width: 100%;
+    width: 220px;
+    height: 27px;
     opacity: 1;
+}
+
+.horizon {
+    border: 0.5px solid white;
+}
+
+.end-navbar-item {
+    margin-bottom: 10px !important;
+    text-decoration: none;
+    color: white!important;
+    transition: .25s ease-in-out;
+}
+.end-navbar-item:hover {
+    color: red !important;
+}
+
+.end-navbar-item-bar-icon {
+    cursor: pointer;
+    height: 20px;
+    right: 100px !important;
+}
+
+.end-navbar-item-bar {
+    height: 30px;
+}
+
+.end-navbar-item-hover {
+    display: block;
+    padding: 0 5px;
+}
+.end-navbar-item-bar:hover > .end-navbar-dropdown {
+    display: block !important;
+}
+
+.end-navbar-dropdown {
+    display: none !important;
+    padding: 10px 0 !important;
+    width: 100%;
+    background-color: #e7e7e7 !important;
+    color: black;
+    top: 40px !important;
+    left: 0;
+}
+
+.link-title-content {
+    text-decoration: none !important;
+}
+.image-title {
+    object-fit: cover;
+
+}
+.title-content {
+    margin: 20px 0 !important;
+    font-size: 22px !important;
+    transition: 0.25s;
+    font-weight: 600;
+    text-decoration: none !important;
+}
+.title-content:hover {
+    opacity: .75;
+}
+.title-content-main {
+    font-size: 16px !important;
 }
