--- a/src/public/CSS/Admin.css
+++ b/src/public/CSS/Admin.css
@@ -8,62 +8,103 @@
     font-family: 'Roboto', sans-serif !important;
 }
 
-.sidebar-logo {
-    color: #59bb6a;
-    transition: 0.25s linear;
+/* start: Sidebar */
+.sidebar-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, .5);
+    z-index: 490;
+    opacity: 1;
+    visibility: visible;
+    transition: opacity .2s;
+}
+.sidebar.collapsed ~ .sidebar-overlay {
+    opacity: 0;
+    visibility: hidden;
+}
+.sidebar.collapsed {
+    width: 4.75rem !important;
+    left: 0 !important;
+}
 
-}
-.sidebar-logo:hover {
-    color: #54a162;
-}
-.sidebar {
-    width: 16em;
+.sidebar::-webkit-scrollbar {
+    width: .25rem;
 }
 .sidebar-toggle {
     cursor: pointer;
-    transition: .25s linear;
+    transition: .2s;
 }
 .sidebar-toggle:hover {
-    transform: translateX(-5px);
+    color: #34b734;
 }
-
-.sidebar-menu{
-    list-style: none;
+.sidebar-menu {
+    list-style-type: none;
 }
-
+.sidebar-menu-item {
+    margin-bottom: .25rem;
+}
 .sidebar-menu-item a {
     text-decoration: none;
     display: flex;
     align-items: center;
-    font-size: 18px;
     color: black;
-    padding: .5rem .75em;
-    border-radius: .625rem;
-    transition: .25s ease-in;
+    padding: .375rem .75rem;
+    border-radius: .375rem;
+    font-size: .875rem;
+    white-space: nowrap;
 }
-.sidebar-menu-item a:hover {
-    opacity: .6;
+.sidebar-menu-item > a {
+    overflow: hidden;
 }
-
-.sidebar-menu-item.active a{
-    background-color: #4cc170;
-    color: black;
-    box-shadow: 0 .25rem .25rem  rgb(0, 0, 0 , 0.175);
+.sidebar-menu-item.focused > a,
+.sidebar-menu-item > a:hover {
+    background-color: #34b734;
 }
-
-.sidebar-menu-divider{
+.sidebar-menu-item.active a {
+    background-color: #34b734;
+    color: white;
+    box-shadow: 0 .25rem .25rem rgba(0, 0, 0, 0.175);
+}
+.sidebar-menu-item-icon {
+    margin-right: .625rem;
+    font-size: 1.25rem;
+}
+.sidebar-menu-item-accordion {
+    transition: transform .2s;
+}
+.sidebar-dropdown-menu-item.focused > a .sidebar-menu-item-accordion,
+.sidebar-menu-item.focused > a .sidebar-menu-item-accordion {
+    transform: rotateZ(180deg);
+}
+.sidebar.collapsed:hover .sidebar-menu-divider,
+.sidebar-menu-divider {
     font-size: .75rem;
-    color: darkgray;
+    color: lightgrey;
+    transition: opacity .2s;
+    opacity: 1;
+    visibility: visible;
 }
-
-
-
-.sidebar-dropdown-menu-item a{
-    padding: 0.375rem 0;
+.sidebar-dropdown-menu-item a {
+    padding: .375rem 0;
+    padding-right: .75rem;
+}
+.sidebar-dropdown-menu-item.focused > a,
+.sidebar-dropdown-menu-item a:hover {
+    color: green;
 }
 .sidebar-dropdown-menu {
-    margin-left: 0.75em;
+    padding-left: 2rem;
 }
+.sidebar-dropdown-menu .sidebar-dropdown-menu {
+    padding-left: 1rem;
+    list-style-type: circle;
+}
+/* end: Sidebar */
+
+
 
 
 /*main admin*/
@@ -73,6 +114,59 @@
     width: calc(100% - 16em) !important;
 }
 
+.main-admin.active {
+    margin-left: 4.5em !important;
+    width: calc(100% - 4.5em) !important;
+}
 #myTable_wrapper {
     margin-top: 30px;
+}
+
+@media (min-width: 768px) {
+    /* start: Sidebar */
+    .sidebar-overlay {
+        opacity: 0;
+        visibility: hidden;
+    }
+
+    .sidebar.collapsed:hover,
+    .sidebar {
+        width: 16rem !important;
+        overflow-y: auto;
+        transition: width .2s, left .2s;
+        left: 0 !important;
+        z-index: 500;
+    }
+
+
+    .sidebar.collapsed .sidebar-logo {
+        display: none;
+    }
+
+    .sidebar.collapsed:hover .sidebar-logo {
+        display: block;
+    }
+
+    .sidebar.collapsed:hover .sidebar-toggle {
+        margin-left: auto;
+        margin-right: 0;
+    }
+
+    .sidebar.collapsed .sidebar-toggle {
+        margin: 0 auto;
+        transform: rotateZ(180deg);
+    }
+
+    .sidebar.collapsed:hover .sidebar-menu-divider {
+        font-size: .75rem;
+        color: lawngreen;
+        transition: opacity .2s;
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .sidebar.collapsed .sidebar-menu-divider {
+        opacity: 0;
+        visibility: hidden;
+    }
 }
